// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResetAllButton "en" locale renders correctly 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: none;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-weight: 600;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 4px;
  outline-offset: 2px;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  -webkit-transition: 0.2s cubic-bezier(0.645,0.045,0.355,1);
  transition: 0.2s cubic-bezier(0.645,0.045,0.355,1);
  -webkit-transition-property: background,color,border;
  transition-property: background,color,border;
  border-radius: 6px;
  padding: 2px 12px;
  color: #0062C9FF;
  background: transparent;
}

.c0:focus-visible {
  outline: none;
  background-color: #007BFB26;
}

.c0:hover:not(:disabled) {
  cursor: pointer;
  color: #004A97FF;
}

.c0:active:not(:disabled) {
  color: #004A97FF;
}

.c0:disabled {
  cursor: not-allowed;
  color: #686E78FF;
}

.c0 .anticon,
.c0 .rovna-ui-icon-root {
  font-size: 16px;
}

.c0:where(.rovna-ui-button-variant-secondary.rovna-ui-button-size-large):not( .rovna-ui-button-has-before, .rovna-ui-button-has-after ) {
  padding: calc(10px - 1px) 20px;
}

.c0:where(.rovna-ui-button-variant-secondary.rovna-ui-button-size-medium):not( .rovna-ui-button-has-before, .rovna-ui-button-has-after ) {
  padding: calc(6px - 1px) 16px;
}

.c0:where(.rovna-ui-button-variant-secondary.rovna-ui-button-size-small):not( .rovna-ui-button-has-before, .rovna-ui-button-has-after ) {
  padding: calc(2px - 1px) 16px;
}

.c0:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-large.rovna-ui-button-icon-only ) {
  padding: calc(12px - 1px);
}

.c0:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-medium.rovna-ui-button-icon-only ) {
  padding: calc(8px - 1px);
}

.c0:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-small.rovna-ui-button-icon-only ) {
  padding: calc(4px - 1px);
}

.c0:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-large.rovna-ui-button-has-before, .rovna-ui-button-variant-secondary.rovna-ui-button-size-large.rovna-ui-button-has-after ):not(.rovna-ui-button-icon-only) {
  padding: calc(10px - 1px) 20px calc(10px - 1px) 16px;
}

.c0:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-medium.rovna-ui-button-has-before, .rovna-ui-button-variant-secondary.rovna-ui-button-size-medium.rovna-ui-button-has-after ):not(.rovna-ui-button-icon-only) {
  padding: calc(6px - 1px) 16px calc(6px - 1px) 12px;
}

.c0:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-small.rovna-ui-button-has-before, .rovna-ui-button-variant-secondary.rovna-ui-button-size-small.rovna-ui-button-has-after ):not(.rovna-ui-button-icon-only) {
  padding: calc(2px - 1px) 12px calc(2px - 1px) 8px;
}

<button
  className="c0 rovna-ui-button rovna-ui-button-variant-link rovna-ui-button-preset-default rovna-ui-button-size-small"
  data-testid="rovna-ui-filters-reset-all-button"
  disabled={false}
  onClick={[Function]}
>
  Reset all filters
</button>
`;

exports[`ResetAllButton "ru" locale renders correctly 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: none;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-weight: 600;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 4px;
  outline-offset: 2px;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  -webkit-transition: 0.2s cubic-bezier(0.645,0.045,0.355,1);
  transition: 0.2s cubic-bezier(0.645,0.045,0.355,1);
  -webkit-transition-property: background,color,border;
  transition-property: background,color,border;
  border-radius: 6px;
  padding: 2px 12px;
  color: #0062C9FF;
  background: transparent;
}

.c0:focus-visible {
  outline: none;
  background-color: #007BFB26;
}

.c0:hover:not(:disabled) {
  cursor: pointer;
  color: #004A97FF;
}

.c0:active:not(:disabled) {
  color: #004A97FF;
}

.c0:disabled {
  cursor: not-allowed;
  color: #686E78FF;
}

.c0 .anticon,
.c0 .rovna-ui-icon-root {
  font-size: 16px;
}

.c0:where(.rovna-ui-button-variant-secondary.rovna-ui-button-size-large):not( .rovna-ui-button-has-before, .rovna-ui-button-has-after ) {
  padding: calc(10px - 1px) 20px;
}

.c0:where(.rovna-ui-button-variant-secondary.rovna-ui-button-size-medium):not( .rovna-ui-button-has-before, .rovna-ui-button-has-after ) {
  padding: calc(6px - 1px) 16px;
}

.c0:where(.rovna-ui-button-variant-secondary.rovna-ui-button-size-small):not( .rovna-ui-button-has-before, .rovna-ui-button-has-after ) {
  padding: calc(2px - 1px) 16px;
}

.c0:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-large.rovna-ui-button-icon-only ) {
  padding: calc(12px - 1px);
}

.c0:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-medium.rovna-ui-button-icon-only ) {
  padding: calc(8px - 1px);
}

.c0:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-small.rovna-ui-button-icon-only ) {
  padding: calc(4px - 1px);
}

.c0:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-large.rovna-ui-button-has-before, .rovna-ui-button-variant-secondary.rovna-ui-button-size-large.rovna-ui-button-has-after ):not(.rovna-ui-button-icon-only) {
  padding: calc(10px - 1px) 20px calc(10px - 1px) 16px;
}

.c0:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-medium.rovna-ui-button-has-before, .rovna-ui-button-variant-secondary.rovna-ui-button-size-medium.rovna-ui-button-has-after ):not(.rovna-ui-button-icon-only) {
  padding: calc(6px - 1px) 16px calc(6px - 1px) 12px;
}

.c0:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-small.rovna-ui-button-has-before, .rovna-ui-button-variant-secondary.rovna-ui-button-size-small.rovna-ui-button-has-after ):not(.rovna-ui-button-icon-only) {
  padding: calc(2px - 1px) 12px calc(2px - 1px) 8px;
}

<button
  className="c0 rovna-ui-button rovna-ui-button-variant-link rovna-ui-button-preset-default rovna-ui-button-size-small"
  data-testid="rovna-ui-filters-reset-all-button"
  disabled={false}
  onClick={[Function]}
>
  Сбросить всё
</button>
`;
